# worker-prep-vision

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.aidoc/: architecture.md  detection.md  operations.md
deploy/: prep-vision.service  update.sh
src/: app.py  config.py  log.py  run.py
src/api/: health.py  prep.py  router.py
src/persistence/: db.py  segments.py  videos.py
src/prep/: detect.py  frames.py  pipeline.py
